li is made 100% width to prevent wrapping during menu link sorting

--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -228,6 +228,7 @@ ul.menu-links {
 
 ul.menu-links li {
     list-style-type : none;
+    width : 100%;
 }
 
 
